Increase memory needed to run integration tests on 64-bit java
git-svn-id: http://svn.topazproject.org/svn/head@2248 48088309-b40f-0410-b149-b14953253675